<resources>
    <string name="app_name">MenuFloatingButton</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="btnLogin">Sign</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="txemail">ini hasil Email</string>
    <string name="txpassword">ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>

</resources>